tests/integration/snapshots/integration__conformance__n_structure_object_unclosed_no_value.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 1
success: false
stdout ---
{"":
stderr ---
error: expected json value, found no significant characters
 --> stdin:1:4
  |
1 | {"":
  |    ^
  |    |
  |    expected due to `:`
  |
help: insert a placeholder value
  |
1 | {"": "rust is a must"
  |      ++++++++++++++++
